deleted vite admin

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -182,4 +182,21 @@ section {
 	padding: 7px;
   }
   
+  .fade-in-out {
+    animation: fadeInOut 4s infinite;
+    animation-duration: 2500ms;
+  }
+  
+  @keyframes fadeInOut {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  
 
